<resources>
    <string name="app_name">Click&amp;Lunch</string>
    <string name="cup_of_coffee">(cupOfCoffee.isEmpty() ? cupOfCoffee.fill() : me.drink(cupOfCoffee));</string>
    <string name="app_hello">Bonjour</string>
    <string name="app_list_shop_search">Restaurant, catégorie</string>

    <string name="ptype_menu">Menus</string>
    <string name="ptype_starter">Entrées</string>
    <string name="ptype_dish">Plats</string>
    <string name="ptype_dessert">Desserts</string>
    <string name="ptype_drink">Boissons</string>
    <string name="ptype_other">Autres</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="new_account">Créer un compte</string>
    <string name="save_account">S\'ENREGISTRER</string>

    <string name="user_lastname">Nom</string>
    <string name="user_firstname">Prénom</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Telephone</string>
    <string name="user_password">Mot de passe</string>
    <string name="user_password_confirmation">Confirmation du mot de passe</string>

    <string name="ariane_step_1">Récapitulatif</string>
    <string name="ariane_step_2">Choix de l\'heure</string>
    <string name="ariane_step_3">Paiement</string>
    <string name="ariane_step_4">Confirmation</string>

    <string name="cancel">Annuler</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="back">Retour</string>
    <string name="choose_hour">Choisir l\'heure</string>
    <string name="goto_payement">Accéder au paiement</string>
    <string name="bought">Payer</string>

    <string name="product_added">Le produit a bien été ajouté à votre commande</string>
    <string name="my_cart">Mon panier</string>
    <string name="total">Total</string>
    <string name="next_schedule">Le prochain créneau est disponible à %schedule%</string>
    <string name="validate_schedule">Valider cet horaire</string>
    <string name="choose_next_schedule">Choisir un autre horaire</string>
    <string name="command_validate">Votre commande va être transmise au restaurateur. Elle sera prête à %schedule%</string>
    <string name="good_reception">Sous réserve de réception du paiement par carte bancaire.</string>
    <string name="cart_titular">Titulaire de la carte bancaire</string>
    <string name="cart_number">Numéro de carte</string>
    <string name="cart_validation_date">Date de validité</string>
    <string name="cart_validation_code">Code de vérification</string>
    <string name="congratulation">Félicitations, votre commande a bien été validée !</string>
    <string name="command_number">Votre numéro de commande est le %num%</string>
    <string name="shop_wait">Le restaurant %shopName% vous attend à %schedule%</string>
    <string name="enjoy_meal">Bon appétit !</string>
    <string name="back_shop_list">Revenir à la liste des restaurants</string>

    <string name="sign_in">Connexion</string>
    <string name="sign_out">Déconnexion</string>
    <string name="no_account">Pas encore de compte ? Inscrivez-vous</string>

    <string name="validation_lastname_empty">Le Prénom ne peut pas être vide.</string>
    <string name="validation_lastname_bad_size">Le Prénom doit être entre 3 et 100 caractéres.</string>
    <string name="validation_lastname_bad_schema">Le Prénom ne respect le format: a-z A-Z À-ÿ 0-9 and - \' ".</string>

    <string name="validation_firstname_empty">Le Nom ne peut pas être vide.</string>
    <string name="validation_firstname_bad_size">Le Nom doit être entre 3 et 100 caractére.</string>
    <string name="validation_firstname_bad_schema">Le Nom ne respect le format: a-z A-Z À-ÿ 0-9 and - \' ".</string>

    <string name="validation_email_empty">L\'Email ne peut pas être vide.</string>
    <string name="validation_email_bad_schema">L\'Email doit respecter le format: dupond@mail.com</string>

    <string name="validation_phone_empty">Le Téléphone ne peut pas être vide.</string>
    <string name="validation_phone_bad_size">Le Téléphone ne respect pas le format: 0689898989 ou +33689898989.</string>

    <string name="validation_password_empty">Le Mot de passe ne peut pas être vide.</string>
    <string name="validation_password_bas_size">Le Mot de passe doit être entre 5 et 1024 caractéres.</string>

    <string name="validation_password_confirmation_empty">La Confirmation du mot de passe ne peut pas être vide.</string>
    <string name="validation_password_not_same">La Confirmation du mot de passe n\'est pas identique au mot de passe.</string>

    <string name="fail_sign_up">Erreur lors de la création du compte, essayer ultérieurement.</string>
    <string name="fail_pass_order">Une erreur est survenue, verifier vôtre commande ou essayer ultérieurement.</string>

    <string name="titular">Titulaire de la carte bancaire</string>
    <string name="card_number">Numéro de carte</string>
    <string name="validity_card">Date de validité</string>
    <string name="verification_code">Code de vérification</string>
    <string name="cart_empty">Le panier ne peut pas être vide.</string>

    <string-array name="choose_hour">
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="choose_minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
</resources>
