<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ConfirmationActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ariane_step_1"
                android:textAlignment="center"
                android:textColor="@color/colorOrangeText"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintLeft_toLeftOf="@id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bubble_gray"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_bar_1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/horizontal_bar_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ariane_step_2"
                android:textAlignment="center"
                android:textColor="@color/colorOrangeText"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/textView"
                app:layout_constraintLeft_toLeftOf="@id/textView"
                app:layout_constraintRight_toRightOf="@id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bubble_gray"
                android:text="2"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_bar_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/horizontal_bar_1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/horizontal_bar_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ariane_step_3"
                android:textAlignment="center"
                android:textColor="@color/colorOrangeText"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/textView3"
                app:layout_constraintLeft_toLeftOf="@id/textView3"
                app:layout_constraintRight_toRightOf="@id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bubble_gray"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_bar_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/horizontal_bar_2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/horizontal_bar_3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ariane_step_4"
                android:textAlignment="center"
                android:textColor="@color/colorOrangeText"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/textView4"
                app:layout_constraintRight_toRightOf="@id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bubble_orange"
                android:text="4"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/horizontal_bar_3"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_commande"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimenMarginDefault"
            app:layout_constraintTop_toBottomOf="@id/guideline6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cl_buttons"
            >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="@dimen/dimenDefault"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimenMarginDefault"
                    android:text="@string/ariane_step_4"
                    android:textColor="@color/colorOrangeText"
                    android:textSize="@dimen/dimenTextSize"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="@dimen/dimenDefault"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimenMarginDefault"
                    android:gravity="left"
                    android:text="@string/congratulation"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimenTextSize"
                    app:layout_constraintBottom_toTopOf="@+id/tv_order_number"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="@dimen/dimenDefault"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimenMarginDefault"
                    android:gravity="left"
                    android:text="@string/command_number"
                    android:textColor="@color/colorOrangeText"
                    android:textSize="@dimen/dimenTextSize"
                    app:layout_constraintBottom_toTopOf="@+id/tv_order_detail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/tv_order_detail"
                    android:layout_width="@dimen/dimenDefault"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimenMarginDefault"
                    android:gravity="left"
                    android:text="@string/shop_wait"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimenTextSize"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_order_number" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="@dimen/dimenDefault"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimenMarginDefault"
                    android:gravity="left"
                    android:text="@string/enjoy_meal"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimenTextSize"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_order_detail" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/btn_activity_confirmation_finish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/back_shop_list"
                android:textColor="@color/colorOrangeText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator1" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>
