<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreenMain"
        tools:context=".activity.UserCreationActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintLeft_toRightOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <TextView
                android:id="@+id/tv_user_creation_create_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_account"
                android:textAlignment="center"
                android:textColor="@color/colorOrangeText"
                android:textSize="@dimen/dimenTitleSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/separator1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_creation_create_title">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_user_creation_lastname"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel"
                        app:layout_constraintBottom_toTopOf="@+id/til_user_creation_firstname"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/et_user_creation_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/dimenTextSize"
                            android:hint="@string/user_lastname"
                            android:inputType="text"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_user_creation_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/til_user_creation_email"
                        app:layout_constraintTop_toBottomOf="@+id/til_user_creation_lastname">

                        <EditText
                            android:id="@+id/et_user_creation_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_firstname"
                            android:textSize="@dimen/dimenTextSize"
                            android:inputType="text"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_user_creation_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        android:theme="@style/TextLabel"
                        app:layout_constraintBottom_toTopOf="@+id/til_user_creation_phone"
                        app:layout_constraintTop_toBottomOf="@+id/til_user_creation_firstname">

                        <EditText
                            android:id="@+id/et_user_creation_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_email"
                            android:textSize="@dimen/dimenTextSize"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_user_creation_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        android:theme="@style/TextLabel"
                        app:layout_constraintBottom_toTopOf="@+id/til_user_creation_password"
                        app:layout_constraintTop_toBottomOf="@+id/til_user_creation_email">

                        <EditText
                            android:id="@+id/et_user_creation_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_phone"
                            android:textSize="@dimen/dimenTextSize"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_user_creation_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        android:theme="@style/TextLabel"
                        app:layout_constraintBottom_toTopOf="@+id/til_user_creation_password_confirmation"
                        app:layout_constraintTop_toBottomOf="@+id/til_user_creation_phone">

                        <EditText
                            android:id="@+id/et_user_creation_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_password"
                            android:textSize="@dimen/dimenTextSize"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_user_creation_password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        android:theme="@style/TextLabel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_user_creation_password">

                        <EditText
                            android:id="@+id/et_user_creation_password_confirmation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_password_confirmation"
                            android:textSize="@dimen/dimenTextSize"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>
                </android.support.constraint.ConstraintLayout>
            </ScrollView>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/cl_user_creation_save">

            </View>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_user_creation_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/btn_user_creation_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:text="@string/save_account"
                    android:textColor="@color/colorOrangeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ProgressBar
                    android:id="@+id/user_creation_loader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/colorOrangeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>
